    * New idle animations: Heavy Infantryman
    * New portrait for the Javelineer, Gryphon.
 * Language and i18n:
   * updated translations: Czech, French, German, Russian 
 * Multiplayer:
   * server:
     * create the fifo group accessible (instead of only user accessible)
 * User interface:
   * Fixed the assertion failure which could happen when clicking on a button
     (bug #12927)

Version 1.5.10:
 * Campaigns:
   * The South Guard:
     * Made 'Into the Depths' a bit easier
   * Under the Burning Suns:
     * fixed a major 1.5.7 regression with Kaleh's AMLAs, that made them
       useless after advancing him to L2 (rel. bug #12911)
     * fixed dehydration in scenario 2 triggering double-advancement for
       dehydrated units when leveling up (rel. bug #12911)
     * fixed some bad logic around the "Dust Devil dance" scene in scen.
       2.
     * made all human-controlled major characters unrenamable.
 * Graphics:
   * New or updated unit graphics: Elvish Enchantress, Orcish Slayer,
     Naga Fighter, Naga Myrmidon
   * New idle animations: Dwarvish Thunderer, Naga Fighter
   * New portrait for the Halberdier, dwarf Ulfserker line
   * Unit HP bar decrease progressively when unit gets hit
   * Rewrote the rendering engine which should fix the drawing order
 * Language and i18n:
   * new translations: Marathi
   * updated translations: British English, Dutch, French, German, Hungarian,
     Italian, Russian, Slovenian, Spanish, Swedish
 * Multiplayer:
   * Added support for observers to pause and continue the game at any time
   * Fixed bug #12896: Map generator does not sync between clients when
     advancing in MP campaigns
   * Updated maps: Clash, Cynsaun Battlefield, Den of Onis, Silverhead Crossing,
     Howling Ghost Badlands, The Wilderlands, Forest of Fear
   * Removed Necrophage from the Undead Random Leader List.
 * Terrains:
   * Enabled mixed deciduous-pine forest terrains