@@ -14,6 +14,7 @@ Version 1.5.10+svn:
  * User interface:
    * Fixed the assertion failure which could happen when clicking on a button
      (bug #12927)
+   * allow chat command quoting as '/ /command'
 
 Version 1.5.10:
  * Campaigns:
